--- a/index.html
+++ b/index.html
@@ -1,8 +1,65 @@
 <!DOCTYPE>
 <head>
     <title>Connect four!</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
-    <div button="click">Play Again!</div>
+    <h1>Connect Four</h1>
+
+    <h3 class="player-turn"></h3>
+
+    <div class="game">
+        <table>
+            <tr>
+           <td class="notch"></td>
+           <td class="notch"></td>
+           <td class="notch"></td>
+           <td class="notch"></td>
+           <td class="notch"></td>
+           <td class="notch"></td>
+           <td class="notch"></td>
+            </tr>
+            <tr>
+                <td class="notch"></td>
+                <td class="notch"></td>
+                <td class="notch"></td>
+                <td class="notch"></td>
+                <td class="notch"></td>
+                <td class="notch"></td>
+                <td class="notch"></td>
+                 </tr>
+                 <tr>
+                    <td class="notch"></td>
+                    <td class="notch"></td>
+                    <td class="notch"></td>
+                    <td class="notch"></td>
+                    <td class="notch"></td>
+                    <td class="notch"></td>
+                    <td class="notch"></td>
+                     </tr>
+                     <tr>
+                        <td class="notch"></td>
+                        <td class="notch"></td>
+                        <td class="notch"></td>
+                        <td class="notch"></td>
+                        <td class="notch"></td>
+                        <td class="notch"></td>
+                        <td class="notch"></td>
+                         </tr>
+                         <tr>
+                            <td class="notch"></td>
+                            <td class="notch"></td>
+                            <td class="notch"></td>
+                            <td class="notch"></td>
+                            <td class="notch"></td>
+                            <td class="notch"></td>
+                            <td class="notch"></td>
+                             </tr>
+        </table>
+        </div>
+
+        <div class="reset">Reset</div>
+    <button="click" class="button">Play Again!</button>
+    <script>src="main.js"</script>
 </body>
 <style></style>
