--- a/index.html
+++ b/index.html
@@ -55,11 +55,19 @@
                             <td class="notch"></td>
                             <td class="notch"></td>
                              </tr>
+                             <tr>
+                                <td class="notch"></td>
+                                <td class="notch"></td>
+                                <td class="notch"></td>
+                                <td class="notch"></td>
+                                <td class="notch"></td>
+                                <td class="notch"></td>
+                                <td class="notch"></td>
+                                 </tr>
         </table>
         </div>
 
-        <div class="reset">Reset</div>
-    <button="click" class="button">Play Again!</button>
+    <button class="button">Play Again!</button>
     <script>src="main.js"</script>
 </body>
 <style></style>
