--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE>
 <head>
     <title>Connect four!</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
 </head>
 <body>
     <h1>Connect Four</h1>
@@ -11,63 +12,63 @@
     <div class="game">
         <table>
             <tr>
-           <td class="notch"></td>
-           <td class="notch"></td>
-           <td class="notch"></td>
-           <td class="notch"></td>
-           <td class="notch"></td>
-           <td class="notch"></td>
-           <td class="notch"></td>
+           <td class="notch" id="1"></td>
+           <td class="notch" id="2"></td>
+           <td class="notch" id="3"></td>
+           <td class="notch" id="4"></td>
+           <td class="notch" id="5"></td>
+           <td class="notch" id="6"></td>
+           <td class="notch" id="7"></td>
             </tr>
             <tr>
-                <td class="notch"></td>
-                <td class="notch"></td>
-                <td class="notch"></td>
-                <td class="notch"></td>
-                <td class="notch"></td>
-                <td class="notch"></td>
-                <td class="notch"></td>
+                <td class="notch" id="8"></td>
+                <td class="notch" id="9"></td>
+                <td class="notch" id="10"></td>
+                <td class="notch" id="11"></td>
+                <td class="notch" id="12"></td>
+                <td class="notch" id="13"></td>
+                <td class="notch" id="14"></td>
                  </tr>
                  <tr>
-                    <td class="notch"></td>
-                    <td class="notch"></td>
-                    <td class="notch"></td>
-                    <td class="notch"></td>
-                    <td class="notch"></td>
-                    <td class="notch"></td>
-                    <td class="notch"></td>
+                    <td class="notch" id="15"></td>
+                    <td class="notch" id="16"></td>
+                    <td class="notch" id="17"></td>
+                    <td class="notch" id="18"></td>
+                    <td class="notch" id="19"></td>
+                    <td class="notch" id="20"></td>
+                    <td class="notch" id="21"></td>
                      </tr>
                      <tr>
-                        <td class="notch"></td>
-                        <td class="notch"></td>
-                        <td class="notch"></td>
-                        <td class="notch"></td>
-                        <td class="notch"></td>
-                        <td class="notch"></td>
-                        <td class="notch"></td>
+                        <td class="notch" id="22"></td>
+                        <td class="notch" id="23"></td>
+                        <td class="notch" id="24"></td>
+                        <td class="notch" id="25"></td>
+                        <td class="notch" id="26"></td>
+                        <td class="notch" id="27"></td>
+                        <td class="notch" id="28"></td>
                          </tr>
                          <tr>
-                            <td class="notch"></td>
-                            <td class="notch"></td>
-                            <td class="notch"></td>
-                            <td class="notch"></td>
-                            <td class="notch"></td>
-                            <td class="notch"></td>
-                            <td class="notch"></td>
+                            <td class="notch" id="29"></td>
+                            <td class="notch" id="30"></td>
+                            <td class="notch" id="31"></td>
+                            <td class="notch" id="32"></td>
+                            <td class="notch" id="33"></td>
+                            <td class="notch" id="34"></td>
+                            <td class="notch" id="35"></td>
                              </tr>
                              <tr>
-                                <td class="notch"></td>
-                                <td class="notch"></td>
-                                <td class="notch"></td>
-                                <td class="notch"></td>
-                                <td class="notch"></td>
-                                <td class="notch"></td>
-                                <td class="notch"></td>
+                                <td class="notch" id="36"></td>
+                                <td class="notch" id="37"></td>
+                                <td class="notch" id="38"></td>
+                                <td class="notch" id="39"></td>
+                                <td class="notch" id="40"></td>
+                                <td class="notch" id="41"></td>
+                                <td class="notch" id="42"></td>
                                  </tr>
         </table>
         </div>
 
     <button class="button">Play Again!</button>
-    <script>src="main.js"</script>
+    
 </body>
 <style></style>
