--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </table>
         </div>
 
-    <button class="button">Play Again!</button>
+    <button class="button" click="reset()">Play Again!</button>
     
 </body>
 <style></style>
