--- a/index.html
+++ b/index.html
@@ -6,65 +6,65 @@
 </head>
 <body>
     <h1>Connect Four</h1>
-
+    <h2>Player One</h2>
     <h3 class="player-turn"></h3>
-
+    <h4>Player Two</h4>
     <div class="game">
         <table>
             <tr>
-           <td class="notch" id="1"></td>
-           <td class="notch" id="2"></td>
-           <td class="notch" id="3"></td>
-           <td class="notch" id="4"></td>
-           <td class="notch" id="5"></td>
-           <td class="notch" id="6"></td>
-           <td class="notch" id="7"></td>
+            <td class="notch" id="0"></td>
+            <td class="notch" id="1"></td>
+            <td class="notch" id="2"></td>
+            <td class="notch" id="3"></td>
+            <td class="notch" id="4"></td>
+            <td class="notch" id="5"></td>
+            <td class="notch" id="6"></td>
             </tr>
             <tr>
-                <td class="notch" id="8"></td>
-                <td class="notch" id="9"></td>
-                <td class="notch" id="10"></td>
-                <td class="notch" id="11"></td>
-                <td class="notch" id="12"></td>
-                <td class="notch" id="13"></td>
-                <td class="notch" id="14"></td>
-                 </tr>
-                 <tr>
-                    <td class="notch" id="15"></td>
-                    <td class="notch" id="16"></td>
-                    <td class="notch" id="17"></td>
-                    <td class="notch" id="18"></td>
-                    <td class="notch" id="19"></td>
-                    <td class="notch" id="20"></td>
-                    <td class="notch" id="21"></td>
-                     </tr>
-                     <tr>
-                        <td class="notch" id="22"></td>
-                        <td class="notch" id="23"></td>
-                        <td class="notch" id="24"></td>
-                        <td class="notch" id="25"></td>
-                        <td class="notch" id="26"></td>
-                        <td class="notch" id="27"></td>
-                        <td class="notch" id="28"></td>
-                         </tr>
-                         <tr>
-                            <td class="notch" id="29"></td>
-                            <td class="notch" id="30"></td>
-                            <td class="notch" id="31"></td>
-                            <td class="notch" id="32"></td>
-                            <td class="notch" id="33"></td>
-                            <td class="notch" id="34"></td>
-                            <td class="notch" id="35"></td>
-                             </tr>
-                             <tr>
-                                <td class="notch" id="36"></td>
-                                <td class="notch" id="37"></td>
-                                <td class="notch" id="38"></td>
-                                <td class="notch" id="39"></td>
-                                <td class="notch" id="40"></td>
-                                <td class="notch" id="41"></td>
-                                <td class="notch" id="42"></td>
-                                 </tr>
+            <td class="notch" id="7"></td>
+            <td class="notch" id="8"></td>
+            <td class="notch" id="9"></td>
+            <td class="notch" id="10"></td>
+            <td class="notch" id="11"></td>
+            <td class="notch" id="12"></td>
+            <td class="notch" id="13"></td>
+            </tr>
+            <tr>
+            <td class="notch" id="14"></td>
+            <td class="notch" id="15"></td>
+            <td class="notch" id="16"></td>
+            <td class="notch" id="17"></td>
+            <td class="notch" id="18"></td>
+            <td class="notch" id="19"></td>
+            <td class="notch" id="20"></td>
+            </tr>
+            <tr>
+            <td class="notch" id="21"></td>
+            <td class="notch" id="22"></td>
+            <td class="notch" id="23"></td>
+            <td class="notch" id="24"></td>
+            <td class="notch" id="25"></td>
+            <td class="notch" id="26"></td>
+            <td class="notch" id="27"></td>
+            </tr>
+            <tr>
+            <td class="notch" id="28"></td>
+            <td class="notch" id="29"></td>
+            <td class="notch" id="30"></td>
+            <td class="notch" id="31"></td>
+            <td class="notch" id="32"></td>
+            <td class="notch" id="33"></td>
+            <td class="notch" id="34"></td>
+            </tr>
+            <tr>
+            <td class="notch" id="35"></td>
+            <td class="notch" id="36"></td>
+            <td class="notch" id="37"></td>
+            <td class="notch" id="38"></td>
+            <td class="notch" id="39"></td>
+            <td class="notch" id="40"></td>
+            <td class="notch" id="41"></td>
+            </tr>
         </table>
         </div>
 
