--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Connect Four</h1>
+    <p id="winner-text"></p>
     <h3 class="player-turn"></h3>
     <div class="game">
         <table>
